# Remainder_CE

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTORS.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  SECURITY.md  generate_ligero_tree_commitments.sh  generate_sample_minibatch_commitments.sh  iriscode_pcp_example  license.txt  run_remainder_multitree.sh  run_remainder_zkdt_upshot.sh  rust-toolchain.toml  scp.sh
hyrax/: Cargo.toml
hyrax/benches/: pcs_bench.rs
hyrax/src/: gkr.rs  lib.rs  pcs.rs  primitives.rs  provable_circuit.rs  utils.rs  verifiable_circuit.rs
hyrax/src/gkr/: helpers.rs  input_layer.rs  layer.rs  output_layer.rs
hyrax/src/pcs/: tests.rs
hyrax/src/primitives/: proof_of_claim_agg.rs  proof_of_dot_prod.rs  proof_of_equality.rs  proof_of_opening.rs  proof_of_product.rs  proof_of_sumcheck.rs
hyrax/src/utils/: vandermonde.rs
remainder_frontend/: Cargo.toml
remainder_frontend/benches/: beta_cascade.rs  evaluate_mle_full.rs  regular_layer.rs
remainder_frontend/examples/: binary_gate.rs  binary_gate_dataparallel.rs  identity_gate.rs  identity_gate_dataparallel.rs  indexed_lookup.rs  lookup.rs  matmult.rs
remainder_frontend/sha256_tests/: binary_adder.rs  sha256_tests.rs  sha2_tests.rs  shift_rotate.rs
remainder_frontend/src/: abstract_expr.rs  components.rs  digits.rs  hyrax_worldcoin_mpc.rs  layouter.rs  lib.rs  utils.rs  zk_iriscode_ss.rs
remainder_frontend/src/components/: digits.rs  tests.rs
remainder_frontend/src/hyrax_worldcoin/: orb.rs  test_worldcoin.rs  v3.rs
remainder_frontend/src/hyrax_worldcoin_mpc/: mpc_prover.rs  test_worldcoin_mpc.rs
remainder_frontend/src/layouter/: builder.rs  layouting.rs  nodes.rs
remainder_frontend/src/worldcoin_mpc/: circuits.rs  components.rs  data.rs  parameters.rs  test_helpers.rs  tests.rs
remainder_frontend/src/zk_iriscode_ss/: circuits.rs  components.rs  data.rs  decode.rs  io.rs  parameters.rs  test_helpers.rs  tests.rs  v3.rs
remainder_frontend/tests/: abstract_expressions.rs  combine_dataparallel_circuits.rs  combine_dataparallel_nondataparallel.rs  combine_nondataparallel_circuits.rs  dataparallel_recombination.rs  dataparallel_selector.rs  dataparallel_simple.rs  distributed_multiplication.rs  linear_and_nonlinear_vars_circuit.rs  lookup.rs  mult_overload_checks.rs  new_interface_tests.rs  nonlinear_nested_selector.rs  nonlinear_selector.rs  product_test.rs  signed_bit_decomp.rs  simple_feedforward_relu_nn.rs  small_verifier_challenge.rs  test_basic_circuit.rs  tutorial.rs  utils.rs
remainder_frontend/tests/hyrax/: hyrax_gkr_tests.rs
remainder_hyrax/: Cargo.toml
remainder_hyrax/benches/: pcs_bench.rs
remainder_hyrax/iriscode_pcp_example/: hashes.json
remainder_hyrax/scripts/: test_iriscode_secret_share_binary.sh
remainder_hyrax/src/: hyrax_gkr.rs  hyrax_pcs.rs  lib.rs  provable_circuit.rs  utils.rs  verifiable_circuit.rs
remainder_hyrax/src/hyrax_gkr/: helpers.rs  hyrax_circuit_inputs.rs  hyrax_input_layer.rs  hyrax_layer.rs  hyrax_output_layer.rs  mod.rs  test_worldcoin.rs  tests.rs
remainder_hyrax/src/hyrax_layouter/: mod.rs
remainder_hyrax/src/hyrax_pcs/: mod.rs  tests.rs
remainder_hyrax/src/hyrax_primitives/: mod.rs  proof_of_claim_agg.rs  proof_of_dot_prod.rs  proof_of_equality.rs  proof_of_opening.rs  proof_of_product.rs  proof_of_sumcheck.rs
remainder_hyrax/src/hyrax_worldcoin/: mock_interface.rs  mod.rs  orb.rs  test_worldcoin.rs  upgrade.rs  v3.rs
remainder_hyrax/src/pedersen/: mod.rs  tests.rs
remainder_hyrax/src/utils/: mod.rs  vandermonde.rs
remainder_hyrax/src/zk_iriscode_ss/: constants
remainder_prover/: Cargo.toml
remainder_prover/benches/: fix_variable.rs  regular_layer.rs
remainder_prover/examples/: permutation_circuit_benches.rs
remainder_prover/src/: circuit_layout.rs  claims.rs  components.rs  expression.rs  input_layer.rs  layer.rs  lib.rs  mle.rs  output_layer.rs  provable_circuit.rs  prover.rs  sumcheck.rs  utils.rs  verifiable_circuit.rs
remainder_prover/src/binary_operations/: binary_adder.rs  logical_shift.rs  mod.rs  rotate_bits.rs
remainder_prover/src/builders/: combine_input_layers.rs  combine_layers.rs  mod.rs
remainder_prover/src/claims/: claim_aggregation.rs  claim_group.rs  ec_claims.rs  mod.rs  tests.rs  wlx_eval.rs
remainder_prover/src/components/: mod.rs
remainder_prover/src/digits/: mod.rs
remainder_prover/src/expression/: abstract_expr.rs  circuit_expr.rs  expr_errors.rs  generic_expr.rs  mod.rs  prover_expr.rs  tests.rs  verifier_expr.rs
remainder_prover/src/gate/: addgate.rs  addgate_tests.rs  batched_addgate.rs  batched_mulgate.rs  gate.rs  gate_helpers.rs  mod.rs  mulgate.rs  mulgate_tests.rs  tests.rs
remainder_prover/src/gate_mle/: gate.rs  gate_helpers.rs  mod.rs  tests.rs
remainder_prover/src/input_layer/: enum_input_layer.rs  fiat_shamir_challenge.rs  hyrax_input_layer.rs  hyrax_placeholder_input_layer.rs  hyrax_precommit_placeholder_input_layer.rs  ligero_input_layer.rs  mod.rs  public_input_layer.rs  tests.rs  (+3 more)
remainder_prover/tests/: batched_circuit.rs  batched_selector_circuit.rs  binary_adder.rs  bug.rs  combine_batched_unbatched_circuit.rs  combine_dataparallel_circuits.rs  combine_dataparallel_circuits_alt.rs  combine_dataparallel_nondataparallel.rs  combine_dataparallel_nondataparallel_alt.rs  combine_nondataparallel_circuits.rs  dataparallel_recombination.rs  dataparallel_selector.rs  dataparallel_selector_alt.rs  dataparallel_simple.rs  dataparallel_simple_alt.rs  distributed_multiplication.rs  linear_and_nonlinear_bits_circuit.rs  linear_and_nonlinear_vars_circuit.rs  lookup.rs  multiple_circuits_circuit.rs  naive_8bit_adder.rs  nonlinear_nested_selector.rs  nonlinear_selector.rs  product_test.rs  sha256_tests.rs  sha2_tests.rs  shift_rotate.rs
remainder_shared_types/: Cargo.toml  sample-generators.json
remainder_shared_types/benches/: pedersen_commitment_bench.rs  transcript_bench.rs
remainder_shared_types/src/: circuit_hash.rs  claims.rs  config.rs  curves.rs  ec.rs  input_layer.rs  layer.rs  lib.rs  pedersen.rs  transcript.rs  utils.rs
(+492 files in other folders)
