[package]
name = "hyrax"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "^4", features = ["derive"] }
criterion = "0.5.1"
rand_chacha = "0.3.1"
shared-types = { path = "../shared_types" }
remainder = { path = "../prover" }
itertools = "0.11.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.105"
thiserror = "1.0.40"
tracing = "0.1.37"
ark-std = { version = "0.5.0" }
num = "0.4.1"
num-bigint = "0.4.4"
sha3 = "0.10.8"
pasta_curves = "0.5.1"
ff = "0.13.0"
ndarray = "0.15.6"
ndarray-npy = "0.8.1"
rayon = "1.7"
sha256 = "1.5.0"
bincode = "1.3.3"
parking_lot = "0.12"
anyhow = "^1"
zeroize = "^1.7"

[features]
parallel = ["remainder/parallel", "ark-std/parallel"]
print-trace = [
  "ark-std/print-trace",
  "shared-types/print-trace",
  "remainder/print-trace",
]

[[bench]]
name = "pcs_bench"
harness = false