[package]
name = "remainder-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
bincode = "1.3.3"
clap = { version = "^4", features = ["derive"] }
criterion = "0.5.1"
rand_chacha = "0.3.1"
itertools = "0.14.0"
ndarray = { version = "0.15.6", features = ["serde"] }
ndarray-npy = "0.8.1"
rayon = "1.8"
remainder-shared-types = { path = "../remainder_shared_types" }
remainder = { path = "../remainder_prover" }
remainder-ligero = { path = "../remainder_ligero" }
remainder-hyrax = { path = "../remainder_hyrax" }
serde = "1.0.219"
serde_json = "1.0.105"
thiserror = "2.0.12"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
once_cell = "1.21.3"
ark-std = "0.5.0"
quickcheck = "1.0.3"
rand = "0.8"
sha256 = "1.5.0"
zeroize = "^1.7"
ark-serialize = { version = "0.5.0", features = ["derive"] }    # For serialization
quickcheck_macros = "1.0.0"

[features]
parallel = [
    "remainder-hyrax/parallel",
    "remainder/parallel",
    "remainder-ligero/parallel",
]
print-trace = ["remainder-shared-types/print-trace"]
# For printing circuit stats and other performance-related things.
performance-debug = ["remainder/performance-debug"]

[[bench]]
name = "fix_variable"
harness = false

[[bench]]
name = "regular_layer"
harness = false

[[bench]]
name = "evaluate_mle_full"
harness = false

[[bench]]
name = "beta_cascade"
harness = false

[[bin]]
name = "sanitycheck_secret_shares"

[[bin]]
name = "world_gen"

[[bin]]
name = "world_prove"

[[bin]]
name = "world_upgrade_verify"

[[bin]]
name = "world_verify_ampc_party"
