[package]
name = "remainder-hyrax"
version = "0.1.0"
edition = "2021"

[dependencies]
rand_chacha = "0.3.1"
remainder-shared-types = { path = "../remainder_shared_types" }
remainder = { path = "../remainder_prover" }
itertools = "0.11.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.105"
thiserror = "1.0.40"
tracing = "0.1.37"
ark-std = "0.4.0"
num = "0.4.1"
num-bigint = "0.4.4"
sha3 = "0.10.8"
pasta_curves = "0.5.1"
ff = "0.13.0"
ndarray = "0.15.6"
ndarray-npy = "0.8.1"
rayon = "1.7"
