[package]
name = "remainder-hyrax"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "=4.3.21", features = ["derive"] }
criterion = "0.5.1"
rand_chacha = "0.3.1"
remainder-shared-types = { path = "../remainder_shared_types" }
remainder = { path = "../remainder_prover" }
itertools = "0.11.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.105"
thiserror = "1.0.40"
tracing = "0.1.37"
ark-std = { version = "0.4.0", features = ["print-trace"] }
num = "0.4.1"
num-bigint = "0.4.4"
sha3 = "0.10.8"
pasta_curves = "0.5.1"
ff = "0.13.0"
ndarray = "0.15.6"
ndarray-npy = "0.8.1"
rayon = "1.7"

[features]
parallel = []
print-trace = []

[[bench]]
name = "pcs_bench"
harness = false

[[bin]]
name = "run_iriscode_circuit"
path = "src/bin/run_iriscode_circuit.rs"

[[bin]]
name = "get_circuit_description"
path = "src/bin/get_circuit_description.rs"
