[package]
name = "remainder-hyrax"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "=4.3.21", features = ["derive"] }
criterion = "0.5.1"
rand_chacha = "0.3.1"
remainder-shared-types = { path = "../remainder_shared_types" }
remainder = { path = "../remainder_prover" }
itertools = "0.11.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.105"
thiserror = "1.0.40"
tracing = "0.1.37"
ark-std = { version = "0.4.0" }
num = "0.4.1"
num-bigint = "0.4.4"
sha3 = "0.10.8"
pasta_curves = "0.5.1"
ff = "0.13.0"
ndarray = "0.15.6"
ndarray-npy = "0.8.1"
rayon = "1.7"
sha256 = "1.5.0"
bincode = "1.3.3"
parking_lot = "0.12"
anyhow = "1.0.95"
zeroize = "1.8.1"

[features]
parallel = ["remainder/parallel", "ark-std/parallel"]
print-trace = [
  "ark-std/print-trace",
  "remainder-shared-types/print-trace",
  "remainder/print-trace",
]

[[bench]]
name = "pcs_bench"
harness = false

[[bin]]
name = "world_gen_iriscode_secret_share_circuit_descriptions"
path = "src/bin/world_gen_iriscode_secret_share_circuit_descriptions.rs"

[[bin]]
name = "world_prove"
path = "src/bin/world_prove.rs"

[[bin]]
name = "world_upgrade_verify"
path = "src/bin/world_upgrade_verify.rs"

[[bin]]
name = "world_verify_ampc_party"
path = "src/bin/world_verify_ampc_party.rs"

[[bin]]
name = "sanitycheck_secret_shares"
path = "src/bin/sanitycheck_secret_shares.rs"