[package]
name = "remainder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-std = "0.4"
approx = "0.5"
clap = { version = "=4.3.21", features = ["derive"] }
criterion = "0.5.1"
# derive_more = "0.99.17"
itertools = "0.11.0"
funty = "2.0.0"
rayon = "1.8"
thiserror = "1.0.40"
tracing = "0.1.37"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num = "0.4.1"
ndarray = { version = "0.15.6", features = ["serde"] }
ndarray-npy = "0.8.1"
tracing-subscriber = "0.3.17"
remainder-ligero = { path = "../remainder_ligero" }
remainder-shared-types = { path = "../remainder_shared_types" }
# halo2-base = { git = "https://github.com/axiom-crypto/halo2-lib", tag = "v0.3.0-ce" } # For BN-254 from Halo2
dyn-clone = "1.0.13"
dyn-clonable = "0.9.0"
log = "0.4"
env_logger = "0.10"
pretty_env_logger = "0.5"
# chrono = "0.4.31"
chrono = "=0.4.30"
# clap = { version = "=4.2.1", features = ["derive"] }
once_cell = "1.18.0"
num-bigint = "0.4.4"
num-traits = "0.2.17"
hex = "0.4"
paste = "1.0.14"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
derive_more = "0.99.17"
enum_dispatch = "0.3.13"
base64 = "0.22.0"
ark-serialize = { version = "0.4", features = ["derive"] } # For serialization
sha3 = "0.10.8"
parking_lot = "0.12"

[dev-dependencies]
pretty_assertions = "1.4.0"

[features]
parallel = ["ark-std/parallel"]
print-trace = [
  "ark-std/print-trace",
  "remainder-ligero/print-trace",
  "remainder-shared-types/print-trace",
]

[[bench]]
name = "fix_variable"
harness = false

[[bench]]
name = "regular_layer"
harness = false

[[bench]]
name = "evaluate_mle_full"
harness = false

[[bench]]
name = "beta_cascade"
harness = false
