[package]
name = "remainder-shared-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.183", features = ["derive"] }
halo2curves = { git = "https://github.com/privacy-scaling-explorations/halo2curves", tag = "v0.6.1", features = [
    "derive_serde",
] }
poseidon = { git = "https://github.com/privacy-scaling-explorations/poseidon", tag = "v2024_01_31" } # Scroll's Poseidon impl
# poseidon-circuit = { git = "ssh://github.com/Modulus-Labs/poseidon-circuit.git", branch = "better-sponge" }
serde_json = "1.0.105"
thiserror = "1.0.40"
tracing = "0.1.37"
itertools = "0.11.0"
ark-std = "0.4.0"
num = "0.4.1"
rayon = "1.8"
rand = "0.8"
criterion = "0.5.1"
num-bigint = "0.4.4"
sha3 = "0.10.8"
pasta_curves = "0.5.1"
ff = "0.13.0"

[[bench]]
name = "transcript_bench"
harness = false
